Removing reactor solutions for Euler problems (#34)
* Removing reactor solutions for Euler problems
* Refactoring
* Cleaning pom.xml